data/derived/comb/progs/unify/prog3503.ml.out
Characters 147-160:
  if (l_diff < 0) then ((clone 0 (l_diff * (-1) @ l1), l2)) else (l1, (clone 0 l_diff @ l2));;
                                  ^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
